get recommendations logic simplified (only one endpoint was left, and calculation logic was moved inside inmemoryrepository) + swagger updated
